--- a/apps/index.html
+++ b/apps/index.html
@@ -1,9 +1,74 @@
 <html>
 <head>
-	<title>Dummy</title>
+	<title>TokoKeren | Menjawab Semua Kebutuhan</title>
+	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/apps.css">
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-	<h1>DUMMY FILE</h1>
+	<header>
+		<div class="container">
 
+			<img src="assets/images/logo.png" width="256px">
+			
+		</div>
+		
+	</header>
+	<nav class="navbar-inverse navbar-head">
+		<div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-left" id="nav-list">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Kategori</a></li>
+          <li><a href="#">Promo</a></li>
+          <li><a href="#">Beli Pulsa</a></li>
+          <li><a href="#">Tiket Kereta</a></li>
+          <li><a href="#">Testimoni</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Kontak</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right menu-top-right" id="nav-right">
+        		<li><a href="#" class="navbar-white login" data-toggle="modal" data-target="#loginModal"> Register</a></li>
+            	<li><a href="#" class="navbar-white login" data-toggle="modal" data-target="#loginModal">  Login</a></li>
+        	</ul>
+      </div>
+    </div>
+	</nav>	  
+	<div class="row" id="headline">
+		<div class="container">
+			<div class="col-md-6">
+				<h1><strong>Toko<mark>Keren.com</mark></strong></h1>
+				<h3>Menjawab Semua Kebutuhan</h3>
+				<button class="btn btn-danger">Belanja!</button>
+			</div>
+				
+		</div>
+	</div>
+	<div id="highlight">
+		<div class="row">
+			<div class="container">
+				<div class="highlight-content text-center">
+					<div class="col-md-4 first" >
+						<img class="img-responsive" src="assets/images/sepatu.jpg" width="100%">
+					</div>
+					<div class="col-md-4 second">
+						<img class="img-responsive" src="assets/images/fashion.jpg" width="100%">
+					</div>
+					<div class="col-md-4 third">
+						<img class="img-responsive" src="assets/images/elektronik.jpg" width="100%">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-</html
+</html>
