--- a/apps/index.html
+++ b/apps/index.html
@@ -3,7 +3,8 @@
 	<title>TokoKeren | Menjawab Semua Kebutuhan</title>
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/apps.css">
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
 	<header>
@@ -66,6 +67,124 @@
 					<div class="col-md-4 third">
 						<img class="img-responsive" src="assets/images/elektronik.jpg" width="100%">
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="product-list">
+		<div class="container">
+			<h2 class="text-center">Produk Terbaik</h2>
+			<h5 class="text-center">Pilih produk terbaik favorit anda</h5><br>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="assets/images/adidas1.jpg">
+				</div>
+				<h4><strong>Sepatu Adidas F50 Red</strong></h4>
+				<h4>Rudy Sport</h4>
+				<h5><strong>$23.00</strong></h5>
+				<p>Categories : Football, Sport<br>
+				Description : Lorem Ipsum Dolor Sit Amet.</p>
+				<button class="btn btn-detail"><strong>Lihat Detail</strong></button>
+			</div>
+			
+		</div>
+	</div>
+	<div id="feature">
+		<div class="container">
+			<h2 class="text-center">Kenapa Belanja di TokoKeren?</h2>
+			<div class="row">
+				<div class="col-md-3 text-center">
+					<h4>Customer Service 24/7</h4>
+					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
+				</div>
+				<div class="col-md-3 text-center">
+					<h4>Jaminan Uang Kembali</h4>
+					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
+				</div>
+				<div class="col-md-3 text-center">
+					<h4>Harga Kompetitif</h4>
+					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
+				</div>
+				<div class="col-md-3 text-center">
+					<h4>Pelapak Terpercaya</h4>
+					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
 				</div>
 			</div>
 		</div>
