Add new html page

--- a/apps/index.html
+++ b/apps/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>TokoKeren | Menjawab Semua Kebutuhan</title>
+	<title>TokoKeren</title>
+	<link rel="shortcut icon" href="assets/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/apps.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -46,12 +47,12 @@
 	</nav>	  
 	<div class="row" id="headline">
 		<div class="container">
-			<div class="col-md-6">
+			<div class="col-xs-6">
 				<h1><strong>Toko<mark>Keren.com</mark></strong></h1>
 				<h3>Menjawab Semua Kebutuhan</h3>
 				<button class="btn btn-danger">Belanja!</button>
 			</div>
-				
+			<div class="col-xs-6"></div>
 		</div>
 	</div>
 	<div id="highlight">
@@ -168,26 +169,64 @@
 	</div>
 	<div id="feature">
 		<div class="container">
-			<h2 class="text-center">Kenapa Belanja di TokoKeren?</h2>
+			<h2 class="text-center">Kenapa Belanja di TokoKeren?</h2><br>
 			<div class="row">
-				<div class="col-md-3 text-center">
+				<div class="feature col-md-3 text-center">
+					<img class="img-centered" width="100" src="assets/images/telemarketer.png">
 					<h4>Customer Service 24/7</h4>
 					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
 				</div>
 				<div class="col-md-3 text-center">
+					<img class="img-centered" width="100" src="assets/images/money.png">
 					<h4>Jaminan Uang Kembali</h4>
 					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
 				</div>
 				<div class="col-md-3 text-center">
+					<img class="img-centered" width="100" src="assets/images/price-tag.png">
 					<h4>Harga Kompetitif</h4>
 					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
 				</div>
 				<div class="col-md-3 text-center">
+					<img class="img-centered" width="100" src="assets/images/thumbs.png">
 					<h4>Pelapak Terpercaya</h4>
 					<p>Lorem Ipsum dolor sit amet conectetum. Ipsum dolor sit amet conectetum</p>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div id="bottom">
+		<div class="container">
+			<div class="col-md-3">
+				<h3>Ikuti Kami</h3>
+
+			</div>
+			<div class="col-md-3">
+				<h3>TokoKeren</h3>
+
+				<li><a href="#">Tentang Kami</a></li>
+				<li><a href="#">Aturan Pelanggan</a></li>
+				<li><a href="#">Kebijakan Privasi</a></li>
+				<li><a href="#">Berita &amp; Pengumuman</a></li>
+			</div>
+			<div class="col-md-3">
+				<h3>Layanan Pelanggan</h3>
+
+				<li><a href="#">Tentang Kami</a></li>
+				<li><a href="#">Aturan Pelanggan</a></li>
+				<li><a href="#">Kebijakan Privasi</a></li>
+				<li><a href="#">Berita &amp; Pengumuman</a></li>
+			</div>
+			<div class="col-md-3">
+				<h3>Dapatkan Update</h3>
+				<form>
+					<input type="text" name="" placeholder="Email Anda ..">
+					<input type="submit" name="" class="btn btn-warning">
+				</form>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<p class="text-center">Copyright &copy; 2017. PT TokoKeren Indonesia</p>
+	</footer>
 </body>
 </html>
