--- a/apps/purchase.html
+++ b/apps/purchase.html
@@ -46,22 +46,110 @@
 	</nav>	  
 	<div id="purchase">
 		<div class="row">
-			<div class="detail-content">
-				<div class="container">
-					<div class="col-md-8">
-						<h3>Detail Pembeli</h3>
+			<div class="container">
+			<div id="detail-pembeli" class="col-md-7">
+				<div class="head-tab">
+			  		<ul class="nav nav-tabs">
+					  	<li class="active"><a data-toggle="tab" href="#home">Non-Pengguna</a></li>
+					    <li><a data-toggle="tab" href="#menu1">Login</a></li>
+					</ul>
+			  	</div>
+				<div class="tab-content">
+			    	<div id="home" class="tab-pane fade in active">
+			      		<h3>Detail Pembeli</h3>
+						<form class="form">
+							<div class="form-group">
+							 	<div class="col-md-12">
+							 		<label for="email">Nama Lengkap</label>
+							    	<input type="email" class="form-control" id="email"><BR>
+							 	</div> 
+  							</div>
+ 							<div class="form-group">
+								<div class="col-xs-6">
+								<label for="email">Email Pembeli</label>
+							    <input type="email" class="form-control" id="email">
+							</div>
+							<div class="col-xs-6">
+								<label for="email">No.Telpon / HP</label>
+							    <input type="email" class="form-control" id="email">
+							</div>
+							<div class="col-md-12">
+								<br>
+								<button id="show-alamat-form" class="btn btn-success">Tambahkan Alamat</button>							
+							</div>
+						</form>
 					</div>
-					<div class="col-md-4">
-						<h3>Ringkasan Belanja</h3>
-						<h5>Total Harga</h5>
-						<h5>Biaya Kirim</h5>
-						<h5>Total Belanja</h5>
-						<button class="btn btn-danger">Checkout</button>
-					</div>
+			    </div>
+			    <div id="menu1" class="tab-pane fade">
+				    <h3>Menu 1</h3>
+				    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			    </div>			   
+				</div>					
 				</div>
+				<div id="ringkasan-belanja" class="col-md-4">
+					<h3>Ringkasan Belanja</h3>
+					<h5>Total Harga		<span class="pull-right">Rp. 230.000,-</span></h5>
+					<h5>Biaya Kirim<span class="pull-right">Rp. 30.000,-</span></h5>
+					<h5>Total Belanja<span class="pull-right">Rp. 260.000,-</span></h5>
+					<button class="btn btn-danger">Checkout</button>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
+
+<div id="purchase">
+		<div class="row">
+			<div class="container">
+			<div id="detail-pembeli" class="col-md-7">
+				<div class="head-tab">
+			  		<ul class="nav nav-tabs">
+					  	<li class="active"><a data-toggle="tab" href="#home">Non-Pengguna</a></li>
+					    <li><a data-toggle="tab" href="#menu1">Login</a></li>
+					</ul>
+			  	</div>
+				<div class="tab-content">
+			    	<div id="home" class="tab-pane fade in active">
+			      		<h3>Detail Pembeli</h3>
+						<form class="form">
+							<div class="form-group">
+							 	<div class="col-md-12">
+							 		<label for="email">Nama Lengkap</label>
+							    	<input type="email" class="form-control" id="email"><BR>
+							 	</div> 
+  							</div>
+ 							<div class="form-group">
+								<div class="col-xs-6">
+								<label for="email">Email Pembeli</label>
+							    <input type="email" class="form-control" id="email">
+							</div>
+							<div class="col-xs-6">
+								<label for="email">No.Telpon / HP</label>
+							    <input type="email" class="form-control" id="email">
+							</div>
+							<div class="col-md-12">
+								<br>
+								<button id="show-alamat-form" class="btn btn-success">Tambahkan Alamat</button>							
+							</div>
+						</form>
+					</div>
+			    </div>
+			    <div id="menu1" class="tab-pane fade">
+				    <h3>Menu 1</h3>
+				    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			    </div>			   
+				</div>					
+				</div>
+				
+			</div>
+			</div>
+		</div>
+	</div>
+	
+
+
+
+
 	<div id="bottom">
 		<div class="container">
 			<div class="col-md-3">
