--- a/apps/product-details.html
+++ b/apps/product-details.html
@@ -9,7 +9,12 @@
 <body>
 	<header>
 		<div class="container">
+
 			<img src="assets/images/logo.png" width="256px">
+			<div class="pull-right">
+				<br>
+				<h5>Halo, Hafizh!</h5>
+			</div>
 		</div>
 		
 	</header>
@@ -26,7 +31,7 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-left" id="nav-list">
-          <li><a href="#" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#">Kategori</a></li>
           <li><a href="#">Promo</a></li>
           <li><a href="#">Beli Pulsa</a></li>
@@ -36,12 +41,13 @@
           <li><a href="#">Kontak</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right menu-top-right" id="nav-right">
-        		<li><a href="#" class="navbar-white login" data-toggle="modal" data-target="#loginModal"> Register</a></li>
-            	<li><a href="#" class="navbar-white login" data-toggle="modal" data-target="#loginModal">  Login</a></li>
+        		
+            	<li><a href="#" class="navbar-white login" data-toggle="modal" data-target="#loginModal">  Logout</a></li>
         	</ul>
       </div>
     </div>
-    </nav>
+	</nav>	  
+
     <div id="content">
     	<div class="row">
     		<div class="detail-content">
