--- a/apps/jasa-kirim.html
+++ b/apps/jasa-kirim.html
@@ -75,7 +75,7 @@
 
 							<div class="col-md-12">
 								<br>
-								<button id="show-alamat-form" class="btn btn-success">Tambahkan Alamat</button>							
+								<button id="submit-jasa-kirim" class="btn btn-success">Submit</button>							
 							</div>
 						</form>
 					</div>
