--- a/apps/promo-produk.html
+++ b/apps/promo-produk.html
@@ -96,7 +96,7 @@
 
 							<div class="col-md-12">
 								<br>
-								<button id="show-alamat-form" class="btn btn-success">Tambahkan Alamat</button>							
+								<button id="submit-promo" class="btn btn-success">Submit</button>							
 							</div>
 						</form>
 					</div>
