register login category kelar

--- a/apps/login.html
+++ b/apps/login.html
@@ -34,7 +34,7 @@
 								</div>
 								<div class="col-md-12">
 								<br>
-								<button id="register-form" class="btn btn-success">LOGIN</button>				
+								<button id="login-form" class="btn btn-success">LOGIN</button>				
 							</div>
 							</form>
 						</div>
