--- a/apps/register.html
+++ b/apps/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TokoKeren</title>
+	<title>Register |TokoKeren</title>
 	<link rel="shortcut icon" href="assets/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/apps.css">
